--- a/src/Xamarin.Info/Xamarin.Info.iOS/Xamarin.Info.iOS.csproj
+++ b/src/Xamarin.Info/Xamarin.Info.iOS/Xamarin.Info.iOS.csproj
@@ -102,7 +102,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="iOSFunctions.cs" />
+    <Compile Include="NfcFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -160,9 +160,6 @@
       <Version>2.0.11</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1260" />
-    <PackageReference Include="Aktiv.RutokenPkcs11Interop">
-      <Version>2.0.11</Version>
-    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
