--- a/src/Xamarin.Info/Xamarin.Info.Android/Xamarin.Info.Android.csproj
+++ b/src/Xamarin.Info/Xamarin.Info.Android/Xamarin.Info.Android.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAarLibrary Include="Jars\rtserviceconnection-*.aar" />
+    <AndroidJavaLibrary Include="Jars\pkcs11jna-*.jar" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
